#288 [update-goods] 공연 카테고리 조회 성능 개선